Criação das rotas solicitadas #91
